src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Accept_TC__c</fullName>
        <description>Signifies if the user accepted the Terms &amp; Conditions presented on the registration screen.</description>
        <label>Accept Terms &amp; Conditions?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub User Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Application__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approved Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <formula>Contact.Account.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_to_Assign__c</fullName>
        <label>Permission Set to Assign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Id__c</fullName>
        <label>Stripe Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>